# ae-soft

./: .replit  README.md  ae.sh  automated_file.txt  code.sh  package-lock.json  pyproject.toml  replit.nix  setup-accounting-system.sh
accounting-pos-wallet-system/backend/: package-lock.json  package.json
accounting-pos-wallet-system/backend/middleware/: auth.js
accounting-pos-wallet-system/frontend/: package-lock.json  package.json
